--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bauer-exec",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Simple wrapper for child_process.execFile.",
   "keywords": [
     "exec",
@@ -12,7 +12,7 @@
   "author": {
     "name": "Yuri Neves Silveira",
     "url": "http://yneves.com/",
-    "email": "npm@yneves.com"
+    "email": "yurinevessilveira@gmail.com"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,10 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": ">=1.0.0"
+    "mocha": "^2.3.4"
   },
   "dependencies": {
-    "bauer-factory": "^2.0.3"
+    "bauer-factory": "^2.0.4"
   },
   "main": "lib/index.js"
 }
